--- a/src/app/pages/overview/overview-view.component.scss
+++ b/src/app/pages/overview/overview-view.component.scss
@@ -117,7 +117,7 @@
             @apply flex items-center justify-between px-4 py-6;
 
             &:nth-child(odd) {
-              @apply bg-light-200 dark:bg-dark-200;
+              @apply bg-light-200 dark:bg-dark-800;
             }
 
             .time {
@@ -125,7 +125,7 @@
 
               .from,
               .to {
-                @apply bg-light-400 px-3 py-1 rounded-lg;
+                @apply bg-light-400 dark:bg-dark-400 px-3 py-1 rounded-lg;
               }
             }
           }
